# serialization

./: .bazelrc  BUILD.bazel  MODULE.bazel
.github/workflows/: bazel.yml
test/: BUILD.bazel  MODULE.bazel
